Der kek am Eck hat viel Speck und tanzt im Dreck mit einem Big macc

--- a/src/app/components/shared-header/shared-header.component.html
+++ b/src/app/components/shared-header/shared-header.component.html
@@ -3,7 +3,7 @@
     <ion-title>{{title}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="presentPopover($event)">
-        <ion-icon name="more"></ion-icon>
+        <ion-icon name="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
