mit Alört und bagfix

--- a/src/app/views/dbbackup/dbbackup.page.html
+++ b/src/app/views/dbbackup/dbbackup.page.html
@@ -15,6 +15,7 @@
     <ion-select-option value="chattingApps">Chatting Apps</ion-select-option>
     <ion-select-option value="streamingUnlimited">Streaming unlimited</ion-select-option>
     <ion-select-option value = "videoEditors">Video Editors</ion-select-option>
+    <ion-select-option value = "clouds">Clouds</ion-select-option>
   </ion-select>
   
 <ion-list [inset] = "true" class = "rounded">
