jz Funktioniert es glaub pog

--- a/src/app/views/dbbackup/dbbackup.page.html
+++ b/src/app/views/dbbackup/dbbackup.page.html
@@ -11,11 +11,12 @@
 
 <ion-content>
   <ion-select interface = "popover" placeholder="WÄHLE EINE LISTE" (ionChange)="handleChange($event)">
-    <ion-select-option value="searchEngines">Search Engines</ion-select-option>
-    <ion-select-option value="chattingApps">Chatting Apps</ion-select-option>
-    <ion-select-option value="streamingUnlimited">Streaming unlimited</ion-select-option>
-    <ion-select-option value = "videoEditors">Video Editors</ion-select-option>
+    <ion-select-option value="search-engines">Search Engines</ion-select-option>
+    <ion-select-option value="chatting-apps">Chatting Apps</ion-select-option>
+    <ion-select-option value="streaming-unlimited">Streaming unlimited</ion-select-option>
+    <ion-select-option value = "video-editors">Video Editors</ion-select-option>
     <ion-select-option value = "clouds">Clouds</ion-select-option>
+    <ion-select-option value = "youtube-social">Youtube Socials</ion-select-option>
   </ion-select>
   
 <ion-list [inset] = "true" class = "rounded">
