--- a/src/app/views/dbbackup/dbbackup.page.html
+++ b/src/app/views/dbbackup/dbbackup.page.html
@@ -15,7 +15,7 @@
     <ion-select-option value="chatting-apps">Chatting Apps</ion-select-option>
     <ion-select-option value="streaming-unlimited">Streaming unlimited</ion-select-option>
     <ion-select-option value = "video-editors">Video Editors</ion-select-option>
-    <ion-select-option value = "clouds">Clouds</ion-select-option>
+    <ion-select-option value = "cloud-downloads">Clouds</ion-select-option>
     <ion-select-option value = "youtube-social">Youtube Socials</ion-select-option>
   </ion-select>
   
