--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -39,17 +39,17 @@ display:flex;
 .rounded {
   border-radius: 15px;
 overflow: hidden;
-  width: 300px;
-  margin-left: 40%;
-  margin-top: 20px;
+  width: 70%;
+  margin-left: 18%;
+  margin-top: 10px;
   border: 0px;
   padding: 0px;
-
+  background-color: #0011ff00;
 }
 
 ion-item {
-  width: 300px;
-  height: 50px;
+  width: 100%;
+  height: 10%;
 
 
 }
