--- a/src/app/popoverpage/popoverpage.component.html
+++ b/src/app/popoverpage/popoverpage.component.html
@@ -1,3 +1,3 @@
 <ion-content class="ion-padding">         
-  <ion-button (click) = "navigatetodbbackup()"  strong = "true" [ngStyle]= "{'--color': 'white', '--background': 'red'}">ÜBERPRÜF ALLE LISTEN</ion-button>
+  <ion-button  (click) = "navigatetodbbackup()"  strong = "true" [ngStyle]= "{'--color': 'white', '--background': 'red', 'width': '105%', 'margin-left': '0%'}">ÜBERPRÜF ALLE LISTEN</ion-button>
 </ion-content>
